src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
}

body {
  background: #cee5f2 !important;
}

.container {
  position: relative;
  text-align: center;
}

.centered {
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: -webkit-linear-gradient(rgb(0, 0, 0), rgb(0, 150, 250));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.carousel {
  height: 50%;
  width: 40%;
}

.link {
  text-decoration: none;
  color: white;
  margin-right: 20px;
  cursor: pointer;
}

.link:hover {
  color: rgb(192, 192, 192);
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

